# tsw-controller-app

./: CHANGELOG.md  CREATING_PROFILE_QUICKSTART.md  DOCS.md  PROFILE_EXPLAINER.md  PROXY_MODE.md  README.md  README.old.md  STEAM_INPUT_SETUP.md
app/: Cargo.toml
app/config/profiles/: test.json
app/src/: action_sequencer.rs  config_loader.rs  controller_manager.rs  direct_controller.rs  main.rs  profile_runner.rs  sync_controller.rs
app/src/commands/: run_calibration_mode.rs
app/src/config_defs/: controller_calibration.rs  controller_profile.rs
beta.package/: PROFILE_EXPLAINER.md
examples/: acela.json  acs64_boston_sprinter.json  allegra.json  amfleet_cabcar.json  bi_level_cabcar_ctx.json  bilevel_rotem_car.json  br114.json  br363_365.json  br411_403_406.json  br442_1442.json  br463_nwagen.json  class08.json  class101.json  class166.json  class20.json  class323.json  class385.json  class390.json  class395.json  class43_gwr.json  class465.json  class66.json  f40ph.json  gallery_cabcar.json  ge4_4.json  hsp46.json  mp36.json  multilevel_cabcar_njt.json  njt-arrow3.json  obb1116.json  obb4024.json  rabe523.json
go-app/: app.go  app_models.go  go.mod  go.sum  main.go  package-lock.json  package.json  run.go  vcpkg.json  wails.json  windows_build.ps1  windows_inno_setup.iss
profile-builder/: index.html
profile-builder-schema/: profile.api_control_assignment.schema.json  profile.assignment_condition.schema.json  profile.assignment_conditions.schema.json  profile.assignment_keys_action.schema.json  profile.linear_assignment.schema.json  profile.schema.json  (+2 more)
(+248 files in other folders)
