[package]
name = "tsw5-gamepad"
version = "0.2.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
doe = { version = "1.1.48", features = ["keyboard", "mouse"] }
gilrs = "0.11.0"
evdev = "0.13.0"
sdl2 = "0.37.0"
log = "0.4.25"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
enigo = "0.3.0"
bezier_easing = "0.1.1"
clap = { version = "4.5.27", features = ["derive"] }
egui = "0.30.0"
eframe = "0.30.0"
egui_extras = "0.30.0"
tungstenite = "0.26.1"
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
rusb = "0.9.4"
sdl2-sys = "0.37.0"
slug = "0.1.6"

